# mylib-rs

./: Cargo.toml  RBTREE_MODULE.md  README.md
algods/: Cargo.toml
algods/benches/: fibonacci_heap.rs  rbtree_map.rs  vec_tree.rs
algods/src/: error.rs  lib.rs
algods/src/collections/: bit_set.rs  disjoint_set.rs  fenwick_tree.rs  fibonacci_heap.rs  linked_list.rs  lru_cache.rs  mod.rs  rbtree_map.rs  segment_tree.rs  trie.rs  union_find.rs
algods/src/collections/rbtree/: entry.rs  iter.rs  map.rs  mod.rs  range.rs  tree.rs
algods/src/graph/: algo.rs  base.rs  graph.rs  mod.rs
algods/src/hierarchy/: hierarchy.rs  mod.rs  tree.rs  vec_tree.rs
concurrency/: Cargo.toml
macros/: Cargo.toml
macros/src/: builder.rs  lib.rs  model.rs  utils.rs
macros/tests/: builder_macro_test.rs
macros/tests/builder/: builder_fail.rs  builder_fail.stderr  builder_ok.rs
num/: Cargo.toml
num/benches/: big_int_mul.rs
num/benches/plots/: big_int_mul.py  data.txt
num/src/: error.rs  lib.rs
num/src/big_num/: mod.rs
num/src/big_num/big_decimal/: big_decimal.rs  mod.rs  round.rs
num/src/big_num/big_integer/: big_integer.rs  mod.rs  ops.rs
num/src/big_num/big_integer/mul/: common.rs  fft_mul.rs  karatsuba_mul.rs  mod.rs  mul.rs  naive_mul.rs
num/src/complex/: complex.rs  mod.rs  ops.rs
num/src/core/: float.rs  integer.rs  mod.rs  number.rs  one.rs  ops.rs  scalar.rs  signed.rs  unsigned.rs  zero.rs
num/src/core/impls/: primitive.rs
num/src/float/: float.rs  mod.rs
num/src/frac/: frac.rs  mod.rs  ops.rs  rational.rs
num/src/impls/: mod.rs  primitive.rs
num/src/integer/: integer.rs  mod.rs  signed.rs  unsigned.rs
num/src/matrix/: matrix.rs  matrix_view.rs  mod.rs
num/src/matrix/ops/: elementwise.rs  macros.rs  mod.rs
num/src/vector/: mod.rs  vector.rs
num/src/vector/vector2/: mod.rs  ops.rs  vector2.rs
num/tests/data/: 12345678-rep-2048-mul-result.txt
xtask/: Cargo.toml
xtask/src/: main.rs
(+13 files in other folders)
