[workspace.package]
authors = ["Ziwei Wu <w_ziwei2004@163.com>"]
description = "My Rust Utilities"
edition = "2024"
license = "MIT"
repository = "https://github.com/iAeternus/mylib-rs.git"
homepage = "https://github.com/iAeternus"

[workspace]
members = ["algods", "macros", "mylib-rs", "num", "xtask"]
resolver = "3"
