[package]
name = "num"
version = "0.1.0"
description = "Numerical Library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[dev-dependencies]
criterion = "0.8.1"

[features]
default = []
core = []

[[bench]]
name = "big_int_mul"
harness = false
